gradle migration and initial troubleshooting